--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-commerce</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="icon" type="image/png" href="./assets/img/icon.png">
     <!-- Google Fonts - Roboto Slab-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,27 +14,29 @@
 </head>
 <body>
     <nav class="nav">
-        <img src="./img/logo_nombre.png" alt="logo_nombre" class="nav__img">
+        <img src="./assets/img/logo_nombre.png" alt="logo_nombre" class="nav__img">
         <button class='nav__button nav__button--toggle'>
             <ion-icon name="cart-outline"></ion-icon>
         </button>
         <div class='nav__car__counter' id="car-counter">0</div>
         <section class="nav__car" id="car">
             <div id="car__list">
-
             </div>
             <button class="empty__button" id="empty-car">Empty car</button>
         </section>
     </nav>
     <header class="header">
-        <img src="./img/logo blanco.png" alt="logo_header" class="header__img">
+        <img src="./assets/img/logo blanco.png" alt="logo_header" class="header__img">
+        <div>
+            <hi class="header__h1">ACADEMLO STORE</hi>
+        </div>
     </header>
     <main class="main">
         <section class="main__section">
             <h3 class="main__h3">Todos nuestros productos</h3>
+            <main class="main" id="products">
             <!-- Lista de productos -->
-            <div id="products-container" class="main__products products">
-    
+            <div id="products-container" class="main__products products">  
             </div>
         </section>
         <!-- Modal -->
@@ -41,18 +45,52 @@
                 <ion-icon name="close-outline" class="modal__icon"></ion-icon>
             </div>
             <div id="modal-element" class="modal__view">
-
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <p class="footer__p">Hecho por Marco Angel Vazquez Mata en Academlo</p>
+    <footer class="footer"> 
+        <div class="footer__div">
+            <section class="footer__div--section">
+                <h4>Our information</h4>
+                <ul>
+                    <li><a href="#">Torreon - Mexico</a></li>
+                </ul>
+            </section>
+            <section class="footer__div--section">
+                <h4>About Us</h4>
+                <ul>
+                    <li><a href="#">Support Center</a></li>
+                    <li><a href="#">Customer Support</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">CopyRight</a></li>
+                </ul>
+            </section>
+            <section class="footer__div--section">
+                <h4>Product</h4>
+                <ul>
+                    <li><a href="#">Hooddies</a></li>
+                    <li><a href="#">Shirts</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Sweatshirts</a></li>
+                </ul>
+            </section>
+            <section class="footer__div--section">
+                <h4>Social</h4>
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </section>
+        </div>
+        <div class="footer__div--info">
+            <p>Hecho por Marco Angel Vazquez Mata en Academlo<a href="mailto:name.marco-2882@hotmail.com" target="_blank"> Correo de contacto</a> y <a href="https://github.com/marcovm17/e-commerce" target="_blank">Repositorio</a></p>
+        </div>
     </footer>
-
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="/gen27/E-commerce/js/main.js"></script>    
+    <script src="./assets/js/main.js"></script>    
 </body>
 </html>
